internet-gateway.tf

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "main"
  }
}
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }

  tags = {
    Name = "public"
  }
}

resource "aws_route_table_association" "sub_a" {
  subnet_id      = aws_subnet.sub_a.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "sub_b" {
  subnet_id      = aws_subnet.sub_b.id
  route_table_id = aws_route_table.public.id
}
